--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,18 +3,19 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background-light: #ffffff;
+  --foreground-light: #171717;
+  --background-dark: #171717;
+  --foreground-dark: #ffffff;
 }
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+/* .light {
 }
+.dark {
+  
+} */
 
 body {
-  color: var(--foreground);
-  background: var(--background);
+  color: var(--foreground-light);
+  background: var(--background-light);
+  overflow-x: hidden;
 }
