--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -1,7 +1,9 @@
 .header {
   position: fixed;
-  top: 2rem;
+  top: 0.5rem;
+  display: block;
+  z-index: 100;
 }
 .yap {
-  color: #fdbd31;
+  color: black;
 }
