--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -1,10 +1,9 @@
 /*Navigation bar*/
 .active {
-  color: purple;
+  color: var(--purple-purple);
 }
 .navbar {
-  position: relative;
-  height: 60px;
+  height: 50px;
   background-color: transparent;
   top: 0;
   overflow: hidden;
@@ -16,18 +15,21 @@
 .navbar a {
   text-align: center;
   display: inline-block;
-  padding: 16px 10px;
+  padding: 0px 10px;
   text-decoration: none;
   font-weight: 500;
 }
 .navbar a:hover {
-  color: #cb80ff;
+  color: var(--purple-hover);
 }
 
 /*dropdown menu*/
 #dropbtn {
+  position: fixed;
+  top: 0.5rem;
+  left: 0.5rem;
   background-color: transparent;
-  color: white;
+  color: var(--purple-purple);
   padding: 16px;
   font-size: 30px;
   border: none;
@@ -35,45 +37,50 @@
   border-radius: 5px;
 }
 #dropbtn:hover {
-  color: #c8b39e;
+  color: var(--purple-hover);
 }
 
 .dropdown {
-  height: 60px;
-  background-color: #345e37;
-  width: 100%;
+  height: 50px;
+  background-color: transparent;
+  width: 20%;
   top: 0;
-  z-index: 98;
   display: block;
   position: fixed;
-  position: relative;
-  text-align: right;
+  top: 4rem;
+  left: 0.5rem;
+  text-align: left;
+  z-index: 100;
 }
 
 .dropdown-content {
   display: none;
   position: absolute;
+  top: 0.5rem;
+  left: 0.5rem;
   background-color: #f9f9f9;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 99;
+  z-index: 100;
   right: 0;
   border-radius: 4px;
 }
 
 .dropdown-content a {
+  position: relative;
   color: black;
   padding: 12px 16px;
   text-decoration: none;
   display: block;
   border-radius: 4px;
+  z-index: 100;
 }
 .dropdown-content a:hover {
   background-color: #f1f1f1;
   border-radius: 4px;
 }
 .dropdown-content a.active {
-  background-color: #333;
+  background-color: var(--yellow-hover);
   color: white;
 }
 
