--- a/src/Styles/MainFeed.module.css
+++ b/src/Styles/MainFeed.module.css
@@ -1,8 +1,9 @@
 @import url("https://cdn.jsdelivr.net/gh/jgthms/minireset.css@master/minireset.min.css");
 .postsContainer {
   position: relative;
-  width: 900px;
+  width: 70vw;
   height: 60vh;
+  padding: 15px;
   overflow: scroll;
   overflow-x: hidden;
   align-items: center;
@@ -10,7 +11,55 @@
   display: inline-block;
   border-radius: 10px;
   background-color: white;
-  box-shadow: 0px 0px 20px 20px #f6c04b;
-  /* top: 50vh;
-      transform: translateY(-50%); */
+  box-shadow: 0px 0px 20px 20px var(--yellow-yellow);
+  text-align: left;
+
+  z-index: 0;
+}
+
+.post {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  padding: 5px;
+  max-width: 55vw;
+}
+.postbox {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  border-bottom: solid rgba(0, 0, 0, 0.26) 1px;
+}
+.postlink {
+  padding: 8px 12px;
+
+  border-radius: 5px;
+  color: white;
+  background-color: var(--purple-purple);
+}
+.postlink:hover {
+  background-color: var(--purple-hover);
+}
+.postlinkContainer {
+  position: absolute;
+  right: 0px;
+  margin-left: 20px;
+}
+.username {
+  font-size: 20px;
+  font-weight: 700;
+}
+.time {
+  font-size: 16px;
+  font-weight: 600;
+  color: #5b2c6f;
+  padding: 0px;
+}
+.date {
+  font-size: 18px;
+  font-style: italic;
+  color: #6d3d81;
 }
