--- a/src/Components/EditBioForm.css
+++ b/src/Components/EditBioForm.css
@@ -7,7 +7,7 @@
   padding: 5px;
   border-radius: 10px;
   background-color: white;
-  box-shadow: 0px 0px 20px 20px #ffc7ff;
+  box-shadow: 0px 0px 20px 20px var(--yellow-hover);
   /* in order: x offset, y offset, blur size, spread size, color */
 
   width: 800px;
@@ -28,7 +28,7 @@
 }
 
 #submit-button {
-  background-color: #cb80ff;
+  background-color: var(--yellow-yellow);
   color: white;
   padding: 6px 10px;
   border: none;
@@ -55,7 +55,7 @@ textarea {
 }
 
 #submit-button:hover {
-  background-color: #a364ff;
+  background-color: var(--yellow-hover);
 }
 
 @media ((width<=825px)) {
