--- a/src/Styles/IndividualPost.module.css
+++ b/src/Styles/IndividualPost.module.css
@@ -1,5 +1,6 @@
 @import url("https://cdn.jsdelivr.net/gh/jgthms/minireset.css@master/minireset.min.css");
 .postContainer {
+  color: black;
   position: relative;
   background-color: white;
   width: 60vw;
@@ -8,6 +9,7 @@
   transform: translateX(-50%); */
   padding-top: 20px;
   padding-bottom: 40px;
+  margin-bottom: 30px;
   border-radius: 10px;
 }
 .username {
@@ -40,7 +42,7 @@
 .link:hover {
   color: var(--purple-purple);
   background-color: white;
-  padding: 0px 20px;
+  padding: 10px 20px;
   border-radius: 15px;
 }
 .commentContainer {
@@ -62,7 +64,7 @@
 }
 .comment {
   font-size: 18px;
-  color: black;
+  color: white;
   margin-bottom: 10px;
 }
 @media ((width<=925px)) {
