--- a/src/Styles/LikedPosts.module.css
+++ b/src/Styles/LikedPosts.module.css
@@ -21,6 +21,7 @@
   display: flex;
   flex-direction: column;
   padding: 10px;
+  margin-right: 15px;
   max-width: 55vw;
 }
 .postbox {
@@ -44,11 +45,12 @@
   background-color: var(--purple-hover);
 }
 .postlinkContainer {
-  position: relative;
+  position: absolute;
   display: flex;
   flex-direction: column;
   justify-items: center;
   right: 5px;
+  padding: 5px;
   margin: 5px;
 }
 .username {
