--- a/src/Styles/MainFeed.module.css
+++ b/src/Styles/MainFeed.module.css
@@ -20,7 +20,7 @@
   display: flex;
   flex-direction: column;
   padding: 10px;
-
+  margin-right: 15px;
   max-width: 55vw;
 }
 
@@ -46,11 +46,12 @@
   background-color: var(--purple-hover);
 }
 .postlinkContainer {
-  position: relative;
+  position: absolute;
   display: flex;
   flex-direction: column;
   justify-items: center;
   right: 5px;
+  padding: 5px;
   margin: 5px;
   /* margin-left: 10px; */
 }
